<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:title="@string/group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/group_all"
            android:title="@string/all"/>
        <item
            android:id="@+id/nav_ungroup"
            android:icon="@drawable/group_ungroup"
            android:title="@string/ungroup"/>
        <item
            android:id="@+id/nav_tmp"
            android:icon="@drawable/group_tmp"
            android:title="@string/tmp"/>
        <item
            android:id="@+id/nav_life"
            android:icon="@drawable/group_life"
            android:title="@string/life"/>
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/group_study"
            android:title="@string/study"/>
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/group_work"
            android:title="@string/work"/>
        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/group_other"
            android:title="@string/other"/>
        <item
            android:id="@+id/nav_psw"
            android:icon="@drawable/group_psw"
            android:title="@string/psw"/>
        <item
            android:id="@+id/nav_recycle"
            android:icon="@drawable/group_recycle"
            android:title="@string/recycle"/>
    </group>
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/setting"
        android:title="@string/setting"/>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/about"
        android:title="@string/about"/>
</menu>
